INTYG-7113: Initiell commit av migreringen av PLP till OpenShift